--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = kicad-script
+name = kicad_script
 version = 0.0.1
 author = Mike Bannister
 author_email = mikebannister@gmail.com
@@ -7,7 +7,7 @@ url = https://github.com/possibilities/kicad-script
 
 [options]
 package_dir =
-    = kicad_script
+    = src
 packages = find:
 python_requires = >=3.6
 setup_requires =
@@ -18,4 +18,4 @@ install_requires =
   sexpdata @ git+https://github.com/jd-boyd/sexpdata.git
 
 [options.packages.find]
-where = kicad_script
+where = src
